# aoc-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/solutions/: mod.rs
src/solutions/y2015/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs
src/solutions/y2019/: mod.rs
src/solutions/y2020/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  mod.rs
src/solutions/y2022/: d01.rs
