[package]
name = "aoc"
version = "0.1.0"
authors = ["rHermes <teodor_spaeren@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = [] }
tokio = { version = "0.2", features = ["full"] }
bytes = { version = "^0.5" }
futures = "0.3"
sha2 = "0.8.0"
dirs = "2.0"
md-5 = "0.8"
num_cpus = "1.11.1"
colored = "1.9"
