[package]
name = "aoc"
version = "0.1.0"
authors = ["rHermes <teodor_spaeren@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = [] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1" }
futures = "0.3"
sha2 = "0.10.6"
dirs = "4.0"
md-5 = "0.10"
num_cpus = "1.15.0"
colored = "2.0"
serde_json = "1.0"

itertools = "0.10"
alloc_counter = "0.0.4"
bitflags = "1.3.2"
